<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_menu_layout">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDuration"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_border"
        android:gravity="center"
        android:inputType="number"
        android:tag="@string/nback"
        android:text="@string/standard_value_duration"
        android:textSize="24sp"
        android:textColor="@color/menu_text_color"
        app:layout_constraintStart_toStartOf="@+id/hintTextViewDuration"
        app:layout_constraintTop_toTopOf="@+id/hintTextViewDuration" />

    <TextView
        android:id="@+id/hintTextViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_border_label"
        android:textColor="@color/menu_text_color"
        android:text="@string/durationAsTrial"
        app:layout_constraintStart_toStartOf="@+id/hintTextViewNBack"
        app:layout_constraintTop_toBottomOf="@+id/editTextNBackLevel" />
</merge>